src/test/ui/parser/expr-as-stmt.stderr
error: expected expression, found `+`
  --> $DIR/expr-as-stmt.rs:8:9
   |
LL |     {2} + {2}
   |         ^ expected expression
   |
help: parentheses are required to parse this as an expression
   |
LL |     ({2}) + {2}
   |     +   +

error: leading `+` is not supported
  --> $DIR/expr-as-stmt.rs:13:9
   |
LL |     {2} + 2
   |         ^ unexpected `+`
   |
help: parentheses are required to parse this as an expression
   |
LL |     ({2}) + 2
   |     +   +

error: expected expression, found `+`
  --> $DIR/expr-as-stmt.rs:19:12
   |
LL |     { 42 } + foo;
   |            ^ expected expression
   |
help: parentheses are required to parse this as an expression
   |
LL |     ({ 42 }) + foo;
   |     +      +

error: expected expression, found `>`
  --> $DIR/expr-as-stmt.rs:32:7
   |
LL |     } > 0
   |       ^ expected expression
   |
help: parentheses are required to parse this as an expression
   |
LL ~     (match x {
LL |         _ => 1,
LL ~     }) > 0
   |

error[E0308]: mismatched types
  --> $DIR/expr-as-stmt.rs:8:6
   |
LL |     {2} + {2}
   |      ^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |     {return 2;} + {2}
   |      ++++++  +

error[E0308]: mismatched types
  --> $DIR/expr-as-stmt.rs:13:6
   |
LL |     {2} + 2
   |      ^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |     {return 2;} + 2
   |      ++++++  +

error[E0308]: mismatched types
  --> $DIR/expr-as-stmt.rs:19:7
   |
LL |     { 42 } + foo;
   |       ^^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |     { return 42; } + foo;
   |       ++++++   +

error[E0308]: mismatched types
  --> $DIR/expr-as-stmt.rs:25:7
   |
LL |     { 3 } * 3
   |       ^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |     { return 3; } * 3
   |       ++++++  +

error[E0614]: type `{integer}` cannot be dereferenced
  --> $DIR/expr-as-stmt.rs:25:11
   |
LL |     { 3 } * 3
   |           ^^^
   |
help: parentheses are required to parse this as an expression
   |
LL |     ({ 3 }) * 3
   |     +     +

error[E0308]: mismatched types
  --> $DIR/expr-as-stmt.rs:36:6
   |
LL |     {2} - 2
   |      ^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |     {return 2;} - 2
   |      ++++++  +

error[E0600]: cannot apply unary operator `-` to type `u32`
  --> $DIR/expr-as-stmt.rs:36:9
   |
LL |     {2} - 2
   |         ^^^ cannot apply unary operator `-`
   |
help: parentheses are required to parse this as an expression
   |
LL |     ({2}) - 2
   |     +   +

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0308, E0600, E0614.
For more information about an error, try `rustc --explain E0308`.
